--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,65 @@
+<!Doctype html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="css/foundation.min.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Galada|Trirong:600i" rel="stylesheet">
     </head>
 <body>
     <header>
+        <h1>AHRG ABOGADOS</h1>
+        <nav class="nav">
+        <a href="index.html">START</a>
+        <a href="#service">SERVICE</a>
+        <a href="contact.html">CONTACT</a>
+        </nav>
     </header>
+  <section class="form">
+
+		<h3>Contact</h3>
+            <p>Leave your information in the form below</p>
+		<form>
+			<fieldset>
+				<label>
+					Name
+					<input type="text" name="Full Name" placeholder="Full Name" required>
+				</label>
+				<label>
+					Email
+					<input type="text" name="Email" placeholder="Your Best Email" required>
+				</label>
+				<label>
+					Phone Number
+					<input type="text" name="phone number" placeholder="Your Best Phone Number" required>
+				</label>
+                <label>
+					Location
+					<input type="text" name="location" placeholder="location where client lives" required>
+				</label>
+				<label>
+					Comments
+					<textarea name="comments"></textarea>
+				</label>
+			</fieldset>
+
+			<input class="button" type="submit" name="submit" value="submit">
+		</form>
+
+	</section>
     </body>
+    <footer>
+        <div>
+    <p>Tlalpan Forest Tetlameya 4337-1,Luis<br>
+    Murillo Huipulco corner,Coyoacan,Mexico<br>
+    DF 04030</p>
+        </div>
+        <div>
+    <p>55 2995-6000<br>
+       72 2173-6300<br>
+       Praxis.lex@gmail.com</p>
+        </div>
+    </footer>
+    <footer>AHRG Lawyers&copy;2016
+    Web Design Templune
+    </footer>
 </html>
