addition of image

--- a/index.html
+++ b/index.html
@@ -1,121 +1,133 @@
 <!Doctype html>
 <html>
-    <head>
-        <link rel="stylesheet" href="css/foundation.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Galada|Trirong:600i" rel="stylesheet">
-    </head>
+
+<head>
+    <link rel="stylesheet" href="css/foundation.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Galada|Trirong:600i" rel="stylesheet">
+</head>
+
 <body>
     <header>
         <h1>AHRG ABOGADOS</h1>
         <nav class="nav">
-        <a href="index.html">START</a>
-        <a href="#service">SERVICE</a>
-        <a href="contact.html">CONTACT</a>
+            <a href="index.html">START</a>
+            <a href="#service">SERVICE</a>
+            <a href="contact.html">CONTACT</a>
         </nav>
     </header>
-    <div class="flo">
-    <h1>Misión</h1>
-    <p>Ejercer todo medio legal y extrajudicial al presidir a nuestros representados, en la atención de los asuntos jurídicos que se nos encomienden, cuidando en todo momento sus intereses y velando que no sean vulnerados sus derechos.</p>
+    <div class="image1">
+        <style>
+            background-image: url(../img/background.jpg);
+            width: 100%;
+            height: 100%;
+
+        </style>
     </div>
     <div class="flo">
-    <h1>Visión</h1>
-    <p>Contar con la preferencia de nuestros clientes versado en la confianza en el otorgamiento de nuestros servicios legales integrados brindado por nuestro claustro profesional de abogados, nulificando las ordalías y malas prácticas de autoridades, que atenten en contra de nuestros representados.</p>
+        <h1>Misión</h1>
+        <p>Ejercer todo medio legal y extrajudicial al presidir a nuestros representados, en la atención de los asuntos jurídicos que se nos encomienden, cuidando en todo momento sus intereses y velando que no sean vulnerados sus derechos.</p>
+    </div>
+    <div class="flo">
+        <h1>Visión</h1>
+        <p>Contar con la preferencia de nuestros clientes versado en la confianza en el otorgamiento de nuestros servicios legales integrados brindado por nuestro claustro profesional de abogados, nulificando las ordalías y malas prácticas de autoridades, que atenten en contra de nuestros representados.</p>
     </div>
     <div class="exp">
-    <h1>Experiencia</h1>
-    <p>Contamos con experiencia de más de 20 años, en ejercicio profesional, atendiendo asuntos en todas las ramas del derecho, prestando servicios a personas físicas como a personas morales en todo el país, en el ámbito federal como local en cada estado de la república.</p>
+        <h1>Experiencia</h1>
+        <p>Contamos con experiencia de más de 20 años, en ejercicio profesional, atendiendo asuntos en todas las ramas del derecho, prestando servicios a personas físicas como a personas morales en todo el país, en el ámbito federal como local en cada estado de la república.</p>
     </div>
     <div class="exp">
-    <h1>Servicios</h1>
-    <p>Confianza, Discreción y Seguridad en sus asuntos personales y de su empresa.</p>
+        <h1>Servicios</h1>
+        <p>Confianza, Discreción y Seguridad en sus asuntos personales y de su empresa.</p>
 
-    <p>Los servicios legales multidisciplinarios que prestamos, están plenamente dirigidos a las necesidades de nuestros clientes, en la asesoría legal especializada, enfocada a la elaboración y ejecución de todo tipo de asuntos jurídicos. Ofreciendo servicios profesionales de manera personalizada exhaustiva y en forma particular a "personas físicas", como a todo tipo de "empresas" o "asociaciones y sociedades civiles" dentro de lo que se denomina derecho corporativo.</p>
+        <p>Los servicios legales multidisciplinarios que prestamos, están plenamente dirigidos a las necesidades de nuestros clientes, en la asesoría legal especializada, enfocada a la elaboración y ejecución de todo tipo de asuntos jurídicos. Ofreciendo servicios profesionales de manera personalizada exhaustiva y en forma particular a "personas físicas", como a todo tipo de "empresas" o "asociaciones y sociedades civiles" dentro de lo que se denomina derecho corporativo.</p>
 
-    <p>La justicia por si misma no existe....</p>
-    <p>La justicia se hace valer por uno mismo con auxilio de un abogado</p>
-    <p>Estamos a sus órdenes</p>
-    <p>En ambos casos orientados sobre una atención y esmerada, pronta y profesional a todos y cada uno de sus requerimientos legales, proporcionada con abogados especializados en consultoría y asesoría jurídica; con amplia experiencia en litigio en todas y cada una de las ramas del derecho. Atendiendo juicios en el Distrito Federal y el Estado de México, cómo en el interior del país, en las diferentes etapas jurisdiccionales, sean en primera, segunda o tercera instancia también conocida como materia de amparo.</p>
+        <p>La justicia por si misma no existe....</p>
+        <p>La justicia se hace valer por uno mismo con auxilio de un abogado</p>
+        <p>Estamos a sus órdenes</p>
+        <p>En ambos casos orientados sobre una atención y esmerada, pronta y profesional a todos y cada uno de sus requerimientos legales, proporcionada con abogados especializados en consultoría y asesoría jurídica; con amplia experiencia en litigio en todas y cada una de las ramas del derecho. Atendiendo juicios en el Distrito Federal y el Estado de México, cómo en el interior del país, en las diferentes etapas jurisdiccionales, sean en primera, segunda o tercera instancia también conocida como materia de amparo.</p>
 
-    <p>Los servicios jurídicos que prestamos, están respaldados con más de veinte años de experiencia, que a lo largo de los años se ha adaptado a las nuevas exigencias y reformas judiciales estando a la vanguardia en todos y cada uno de los ámbitos legales que nos requieren en nuestros servicios, como lo es, en los juicios orales que se han estado reformando en todo el país, instrumentándose en diversas disciplinas en el derecho mexicano, en las competencias locales de cada Estado (derecho común) o en competencia Federal, patrocinados por especialistas que integran el claustro profesional de abogados.</p>
+        <p>Los servicios jurídicos que prestamos, están respaldados con más de veinte años de experiencia, que a lo largo de los años se ha adaptado a las nuevas exigencias y reformas judiciales estando a la vanguardia en todos y cada uno de los ámbitos legales que nos requieren en nuestros servicios, como lo es, en los juicios orales que se han estado reformando en todo el país, instrumentándose en diversas disciplinas en el derecho mexicano, en las competencias locales de cada Estado (derecho común) o en competencia Federal, patrocinados por especialistas que integran el claustro profesional de abogados.</p>
     </div>
 
 
     <div class="section group">
-	<div class="col span_1_of_3">
-        <h1>01/</h1>
-        <h2>AMPARO</h2>
-        <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
-        <input class="button" type="submit" name="submit" value="submit">
-	</div>
-	<div class="col span_1_of_3">
-	<h1>02/</h1>
-        <h2>PENAL</h2>
-        <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
-        <input class="button" type="submit" name="submit" value="submit">
-	</div>
-	<div class="col span_1_of_3">
-	<h1>03/</h1>
-        <h2>FAMILIAR</h2>
-        <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
-        <input class="button" type="submit" name="submit" value="submit">
-	</div>
-</div>
-    <div class="section group">
-	<div class="col span_1_of_3">
-	<h1>04/</h1>
-        <h2>CIVIL</h2>
-        <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
-        <input class="button" type="submit" name="submit" value="submit">
-	</div>
-	<div class="col span_1_of_3">
-	<h1>05/</h1>
-        <h2>LABORAL</h2>
-        <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
-        <input class="button" type="submit" name="submit" value="submit">
-	</div>
-	<div class="col span_1_of_3">
-	<h1>06/</h1>
-        <h2>AGRARIO</h2>
-        <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
-        <input class="button" type="submit" name="submit" value="submit">
-	</div>
-</div>
-    <div class="section group">
-	<div class="col span_1_of_3">
-	<h1>07/</h1>
-        <h2>MILITAR</h2>
-        <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
-        <input class="button" type="submit" name="submit" value="submit">
-	</div>
-	<div class="col span_1_of_3">
-	<h1>08/</h1>
-        <h2>EMPRESARIAL</h2>
-        <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
-        <input class="button" type="submit" name="submit" value="submit">
-	</div>
-	<div class="col span_1_of_3">
-	<h1>09/</h1>
-        <h2>MERCANTIL</h2>
-        <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
-        <input class="button" type="submit" name="submit" value="submit">
-	</div>
-</div>
-
-
-
-    </body>
-    <footer>
-        <div>
-    <p>Tlalpan Forest Tetlameya 4337-1,Luis<br>
-    Murillo Huipulco corner,Coyoacan,Mexico<br>
-    DF 04030</p>
+        <div class="col span_1_of_3">
+            <h1>01/</h1>
+            <h2>AMPARO</h2>
+            <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
+            <input class="button" type="submit" name="submit" value="submit">
         </div>
-        <div class="info">
-    <p>55 2995-6000<br>
-       72 2173-6300<br>
-       Praxis.lex@gmail.com</p>
+        <div class="col span_1_of_3">
+            <h1>02/</h1>
+            <h2>PENAL</h2>
+            <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
+            <input class="button" type="submit" name="submit" value="submit">
         </div>
-    </footer>
-    <footer>AHRG Lawyers&copy;2016</footer>
+        <div class="col span_1_of_3">
+            <h1>03/</h1>
+            <h2>FAMILIAR</h2>
+            <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
+            <input class="button" type="submit" name="submit" value="submit">
+        </div>
+    </div>
+    <div class="section group">
+        <div class="col span_1_of_3">
+            <h1>04/</h1>
+            <h2>CIVIL</h2>
+            <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
+            <input class="button" type="submit" name="submit" value="submit">
+        </div>
+        <div class="col span_1_of_3">
+            <h1>05/</h1>
+            <h2>LABORAL</h2>
+            <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
+            <input class="button" type="submit" name="submit" value="submit">
+        </div>
+        <div class="col span_1_of_3">
+            <h1>06/</h1>
+            <h2>AGRARIO</h2>
+            <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
+            <input class="button" type="submit" name="submit" value="submit">
+        </div>
+    </div>
+    <div class="section group">
+        <div class="col span_1_of_3">
+            <h1>07/</h1>
+            <h2>MILITAR</h2>
+            <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
+            <input class="button" type="submit" name="submit" value="submit">
+        </div>
+        <div class="col span_1_of_3">
+            <h1>08/</h1>
+            <h2>EMPRESARIAL</h2>
+            <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
+            <input class="button" type="submit" name="submit" value="submit">
+        </div>
+        <div class="col span_1_of_3">
+            <h1>09/</h1>
+            <h2>MERCANTIL</h2>
+            <p>En juicios de garantías constitucionales ante los tribunales correspondientes, atendiendo la instancia en cualquier rama del derecho.</p>
+            <input class="button" type="submit" name="submit" value="submit">
+        </div>
+    </div>
+
+
+
+</body>
+<footer>
+    <div>
+        <p>Tlalpan Forest Tetlameya 4337-1,Luis
+            <br> Murillo Huipulco corner,Coyoacan,Mexico
+            <br> DF 04030</p>
+    </div>
+    <div class="info">
+        <p>55 2995-6000
+            <br> 72 2173-6300
+            <br> Praxis.lex@gmail.com
+        </p>
+    </div>
+</footer>
+<footer>AHRG Lawyers&copy;2016</footer>
+
 </html>
